<resources>
    <string name="app_name">The Code Cup</string>
    <string name="choose_coffee">Choose your coffee</string>
    <string name="loyalty">Loyalty Card</string>
    <string name="loyalty_progress">1/8</string>

    <string name="profile_title">Profile</string>
    <string name="label_full_name">Full name</string>
    <string name="label_phone_number">Phone number</string>
    <string name="label_email">Email</string>
    <string name="label_address">Address</string>

    <string name="guest_name">Guest</string>
    <string name="full_name_value">Anderson</string>
    <string name="phone_value">+60134589525</string>
    <string name="email_value">Anderson@email.com</string>
    <string name="address_value">3 Addersion Court\nChino Hills, HO56824, United State</string>

    <string name="content_description_edit">Edit</string>
    <string name="content_description_profile_icon">Profile Icon</string>
    <string name="content_description_phone_icon">Phone Icon</string>
    <string name="content_description_email_icon">Email Icon</string>
    <string name="content_description_address_icon">Address Icon</string>

    <string name="dialog_title_edit">Edit %s</string>
    <string name="dialog_hint_full_name">Enter full name</string>
    <string name="dialog_hint_phone_number">Enter phone number</string>
    <string name="dialog_hint_email">Enter email</string>
    <string name="dialog_hint_address">Enter address</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_cancel">Cancel</string>

    <string name="order_success_title">Order Success</string>
    <string name="order_success_message">Your order has been placed successfully.\nFor more details, go to my orders.</string>
    <string name="track_my_order_button">Track My Order</string>
    <string name="content_description_order_success_icon">Order Success Icon</string>

    <string name="details_title">Details</string>
    <string name="content_description_back_button">Back</string>
    <string name="content_description_cart_button">Shopping Cart</string>
    <string name="content_description_drink_image">Drink Image</string>
    <string name="content_description_minus_button">Decrease quantity</string>
    <string name="content_description_plus_button">Increase quantity</string>

    <string name="label_shot">Shot</string>
    <string name="option_single">Single</string>
    <string name="option_double">Double</string>

    <string name="label_select">Select</string>
    <string name="content_description_hot_coffee">Hot Coffee</string>
    <string name="content_description_cold_coffee">Cold Coffee</string>

    <string name="label_size">Size</string>
    <string name="content_description_small_size">Small size</string>
    <string name="content_description_medium_size">Medium size</string>
    <string name="content_description_large_size">Large size</string>

    <string name="label_ice">Ice</string>
    <string name="option_ice_none">None</string>
    <string name="option_ice_less">Less</string>
    <string name="option_ice_normal">Normal</string>

    <string name="label_total_amount">Total Amount</string>
    <string name="button_add_to_cart">Add to cart</string>

    <string name="cart_title">My Cart</string>
    <string name="button_place_order">Place Order</string>
    <string name="content_description_remove_item">Remove item from cart</string>


    <string name="rewards_title">Rewards</string>
    <string name="content_description_coffee_cup">Coffee cup progress icon</string>
    <string name="my_point">My Points:</string>
    <string name="points">100</string>
    <string name="unlock_more_rewards">Unlock More Rewards</string>
    <string name="button_redeem_now">Redeem Now</string>

    <string name="history_rewards_title">History Rewards</string>
    <string name="content_description_reward_icon">Reward Icon</string>

    <string name="my_order_title">My Order</string>
    <string name="tab_on_going">On Going</string>
    <string name="tab_history">History</string>
    <string name="button_track_order">Track Order</string>
    <string name="content_description_order_status_icon">Order Status Icon</string>
    <string name="no_on_going_orders_message">No ongoing orders found.</string>
    <string name="no_history_orders_message">No past orders found.</string>

</resources>