<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:text="@string/profile_title"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_title">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ellipse_10"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/profileimg"
                android:contentDescription="@string/content_description_profile_icon"
                app:tint="@color/colorTextPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_full_name"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_full_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_value"
                android:textColor="@color/colorTextPrimary"
                android:textSize="23dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_edit_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_edit"
            android:padding="8dp"
            android:src="@drawable/editimg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_full_name">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ellipse_10"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/content_description_phone_icon"
                android:src="@drawable/groupimg"
                app:tint="@color/colorTextPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_phone_number"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_phone_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_value"
                android:textColor="@color/colorTextPrimary"
                android:textSize="23dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_edit_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_edit"
            android:padding="8dp"
            android:src="@drawable/editimg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_phone_number">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ellipse_10"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/content_description_email_icon"
                android:src="@drawable/messageimg"
                app:tint="@color/colorTextPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_value"
                android:textColor="@color/colorTextPrimary"
                android:textSize="23dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_edit"
            android:padding="8dp"
            android:src="@drawable/editimg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_email">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ellipse_10"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/locationimg"
                android:contentDescription="@string/content_description_address_icon"
                app:tint="@color/colorTextPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_address"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv_address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_value"
                android:textColor="@color/colorTextPrimary"
                android:textSize="23dp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_edit"
            android:padding="8dp"
            android:src="@drawable/editimg" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>