<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".OrderSuccessActivity">

    <ImageView
        android:id="@+id/iv_success_icon"
        android:layout_width="177dp"
        android:layout_height="177dp"
        android:contentDescription="@string/content_description_order_success_icon"
        android:src="@drawable/take_away_1"
        app:layout_constraintBottom_toTopOf="@+id/tv_order_success_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="@color/colorTextPrimary" />

    <TextView
        android:id="@+id/tv_order_success_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24px"
        android:text="@string/order_success_title"
        android:textColor="@color/colorText5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_order_success_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_success_icon" />

    <TextView
        android:id="@+id/tv_order_success_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/order_success_message"
        android:textAlignment="center"
        android:textColor="@color/colorText4"
        android:textSize="54px"
        app:layout_constraintBottom_toTopOf="@+id/btn_track_my_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_success_title" />

    <Button
        android:id="@+id/btn_track_my_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/colorText3"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/track_my_order_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>