<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    tools:context=".RewardsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_back_button"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorTextPrimary" />

        <TextView
            android:id="@+id/tv_rewards_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewards_title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/loyalty_card_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackgroundDark"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/loyalty"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="21dp" />

                        <TextView
                            android:id="@+id/tv_loyalty_progress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/loyalty_progress"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="21dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_corners_white_background"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingVertical="8dp">

                        <ImageView
                            android:id="@+id/cup_1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/content_description_coffee_cup"
                            android:src="@drawable/coffee_cup_1" />

                        <ImageView
                            android:id="@+id/cup_2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/content_description_coffee_cup"
                            android:src="@drawable/coffee_cup_2" />

                        <ImageView
                            android:id="@+id/cup_3"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/content_description_coffee_cup"
                            android:src="@drawable/coffee_cup_2" />

                        <ImageView
                            android:id="@+id/cup_4"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/content_description_coffee_cup"
                            android:src="@drawable/coffee_cup_2" />

                        <ImageView
                            android:id="@+id/cup_5"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/content_description_coffee_cup"
                            android:src="@drawable/coffee_cup_2" />

                        <ImageView
                            android:id="@+id/cup_6"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/content_description_coffee_cup"
                            android:src="@drawable/coffee_cup_2" />

                        <ImageView
                            android:id="@+id/cup_7"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/content_description_coffee_cup"
                            android:src="@drawable/coffee_cup_2" />

                        <ImageView
                            android:id="@+id/cup_8"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:contentDescription="@string/content_description_coffee_cup"
                            android:src="@drawable/coffee_cup_2" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorBackgroundDark"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/my_point"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_current_points"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/points"
                            android:textColor="@color/colorTextSecondary"
                            android:textSize="40sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <Button
                        android:id="@+id/btn_redeem_reward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/teal_700"
                        android:paddingVertical="12dp"
                        android:text="@string/button_redeem_now"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_rewards_title"
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reward_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_reward_history" />
        </LinearLayout>
    </ScrollView>


    <FrameLayout
        android:id="@+id/bottom_navigation_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/colorBackgroundCard"
            app:itemIconTint="@color/colorBackgroundDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/navigation" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>